--- a/research.html
+++ b/research.html
@@ -1,6 +1,6 @@
-Research
+<h1>Research</h1>
 
-My research interests focus primarily on the use of spectroscopy to investigate
+<p>My research interests focus primarily on the use of spectroscopy to investigate
 the relationship between a galaxy's ISM and energetic phenomena such as young
 stellar populations and AGN. I use rest-frame UV and optical spectroscopy from
 JWST, HST, the SDSS, and other facilities to study line-emitting gas in local
@@ -9,9 +9,9 @@ photoionization models, and stellar population synthesis to infer fundamental
 properties of the ISM, stars, ionizing radiation, and ionized gas kinematics in
 other galaxies. Currently, I work on a variety of projects led by faculty at
 multiple institutions, which has given me the opportunity for extensive
-collaboration with astronomers across the world.
+collaboration with astronomers across the world.</p>
 
-With <a href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>
+<p>With <a href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>
 (Williams College), I am using a combination of
 UV spectroscopy with HST/COS
 (the <a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..260....1F/abstract">LzLCS</a>,
@@ -22,27 +22,27 @@ understanding of the origins of cosmic reionization by providing a foundational
 reference sample spanning a very wide parameter space. With the LzLCS, I have
 found substantial scatter in nearly all proposed tracers of Lyman continuum
 escape and established that ionizing feedback, rather than supernovae, is the
-key mechanism for facilitating LyC escape.
+key mechanism for facilitating LyC escape.</p>
 
-With <a href="https://bv.fapesp.br/en/pesquisador/32467/oli-luiz-dors-junior">Oli Dors, Jr</a>, (UNIVAP), I am using optical spectroscopy to investigate the
+<p>With <a href="https://bv.fapesp.br/en/pesquisador/32467/oli-luiz-dors-junior">Oli Dors, Jr</a>, (UNIVAP), I am using optical spectroscopy to investigate the
 temperature structure and chemical composition of ionized gas in AGN. We use a
 combination of CLOUDY (see Oli's extensive AGN series) and MAPPINGS to assess
 effects of nebular properties and physics on the apparent temperature structure
-to obtain insight from our empirical constraints using nebular auroral lines.
+to obtain insight from our empirical constraints using nebular auroral lines.</p>
 
-With <a href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University), I am using IFU,
+<p>With <a href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University), I am using IFU,
 SDSS, and long-slit spectroscopy to investigate the relationships between AGN,
 star formation, and their host galaxies by analyzing the nebular emission line
 properties, including flux ratio diagnostics like the BPT, nebular diagnostics,
 and line profile shapes. With Ed, I have mentored several Master's students and
-directly assisted with their final thesis projects.
+directly assisted with their final thesis projects.</p>
 
-In a different vein, inspired by a graduate course the astrophysics of stellar
+<p>In a different vein, inspired by a graduate course the astrophysics of stellar
 interiors, I started a research group to investigate and develop novel
 diagnostics of the dynamos and structure of low mass (< 1 Msun) stars using
 Gaia, 2MASS, Kepler, and TESS photometry. I work with two other PhD candidates,
 <a href="https://www.umass.edu/astronomy/people/graduate-student/sandra-bustamante">Sandra Bustamante</a> (UMass)
 and <a href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garcia Soto</a> (Darmouth), as well as
-rising graduate student <a href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).
+rising graduate student <a href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).</p>
 
-Check out <a href="https://ui.adsabs.harvard.edu/public-libraries/4YGg7Pm5TVOXW659qG2YPw">my ADS publication list</a> to learn more!
+<p>Check out <a href="https://ui.adsabs.harvard.edu/public-libraries/4YGg7Pm5TVOXW659qG2YPw">my ADS publication list</a> to learn more!</p>
