updated about.html content

--- a/about.html
+++ b/about.html
@@ -1,1 +1,56 @@
-About me
+<h1> About Me </h1>
+
+<p>Hello! My name is Sophia. I started my astronomy career as a physics major in
+college. I loved quantum mechanics, thermodynamics, and statistics. When I first
+got to see a rest-frame optical AGN emission spectrum as an undergrad, I asked
+question after question about emission mechanisms, line profiles, and nebular
+astrophysics. My curiosity was, and still is, insatiable. I had to learn more.</p>
+
+<p>The Journey was not easy. I tried three separate times to get into an astronomy
+PhD program before I was waitlisted at UMass. I did a Master's program, worked
+in planetary science, and wrote my first publication in my efforts to progress
+to the next level. I discovered many barriers to entry for people like me --
+transgender, mental health, socioeconomic. As a result, I have developed a deep
+empathy for others and an active dedication to diversity, equity, and belonging.</p>
+
+<p>My PhD experience was heavily impacted by the COVID19 pandemic. Courses and
+research were fully remote, which forced me to develop my independence as a
+worker, thinker, researcher, and scientist far earlier than otherwise might have
+been expected. But my work with the LzLCS has opened up a wider, international
+astronomical community to me. I have grown not just in my technical prowess but
+also in my appreciation for the bigger picture, the global scale of our small
+but rigorous field.</p>
+
+<h3> Non-Astronomy Interests </h3>
+
+<p> I read. Voraciously. Recent compelling books include
+  "East of Eden" by Steinbeck,
+  "The Things They Carried" by Tim O'Brien, and
+  "The Book of Strange New Things" by Michael Faber.
+</p>
+
+<p> I bake bread. This was not part of the pandemic bread-baking craze. I simply
+love the feeling of kneading dough, of seeing various pre-ferments and
+combinations of yeast, flour, salt, and water produce such wonderfully different
+flavors and textures. Favorites to bake include focaccia and pain de compagne.
+</p>
+
+<p> I have three cats. They are doofuses. I love them. </p>
+
+<p> I am part of a diverse community of local fiber artists (knitting, tatting,
+crotchet, quilting, spinning, etc). I do the fiber art of embroidery. It is
+tedious but soothing.</p>
+
+<p> I play classical piano. Pieces I am learning/finessing include
+"Rhapsody on a Theme of Paganini" - Rachmaninoff,
+"Nocturne in C# Minor" - Chopin,
+"1st Arabesque" - Debussy,
+"1st Gymnopedie" - Satie.
+</p>
+
+<p> My best friend got me into board games when we were kids. It's a great way
+to problem solve, cooperatively or competitively, learn new ways to think about
+systems with different rules, develop teamwork skills, learn to embrace setbakcs
+and losses, and to build social connections and community. Current games I am
+into include "Settlers of Catan", "Terraforming Mars", "Wingspan", and
+"Race for the Galaxy".</p>
