teaching.html content plus img directory

--- a/teaching.html
+++ b/teaching.html
@@ -1,1 +1,18 @@
-teaching
+<p> Teaching </p>
+
+<p>I have experience with a variety of introductory astronomy classes both for
+majors and for non-majors. My most extensive TA work involved developing and
+teaching observational astronomy labs involving the use of python and
+numerical methods. These labs focused on developing specific technical skills
+in python for solving problems in data analysis and modeling, particularly in
+the use of linear algebra, convergence tests, boundary and initial value
+problems, modular design, array management, and image processing.</p>
+
+<p>To illustrate the exercises I developed for my students, here is a zoom-in on the
+fractal produced from the Mandelbrot set. I had students write functions to test
+the Mandelbrot set for divergence over a grid of input values and map the test
+results into an image like the one shown here. The skills they developed here
+were then directly applied to manual data reduction of raw images they recorded
+on a CCD mounted on a 17 inch reflector.</p>
+
+<img src="https://sflury.github.io/img/mandelbrot.png" alt="Mandelbrot zoom-in">
