fixed header formatting

--- a/teaching.html
+++ b/teaching.html
@@ -1,4 +1,4 @@
-<p> Teaching </p>
+<h1> Teaching </h1>
 
 <p>I have experience with a variety of introductory astronomy classes both for
 majors and for non-majors. My most extensive TA work involved developing and
