added site links to pages

--- a/about.html
+++ b/about.html
@@ -54,3 +54,10 @@ systems with different rules, develop teamwork skills, learn to embrace setbakcs
 and losses, and to build social connections and community. Current games I am
 into include "Settlers of Catan", "Terraforming Mars", "Wingspan", and
 "Race for the Galaxy".</p>
+
+
+<ul>
+<li><a href="https://sflury.github.io/index.html">Home</a></li>
+<li><a href="https://sflury.github.io/research.html">Research</a></li>
+<li><a href="https://sflury.github.io/teaching.html">Teaching</a></li>
+</ul>
