--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 My name is Sophia Flury. I am currently a PhD candidate at the University of
 Massachusets.
 
-
-<a href="https://sflury.github.io/research.html">Research</a>
- 
-<a href="https://sflury.github.io/about.html">About</a>
-
-<a href="https://sflury.github.io/teaching.html">Teaching</a>
+<ul>
+<li><a href="https://sflury.github.io/about.html">About</a></li>
+<li><a href="https://sflury.github.io/research.html">Research</a></li>
+<li><a href="https://sflury.github.io/teaching.html">Teaching</a></li>
+</ul>
