--- a/research.html
+++ b/research.html
@@ -46,3 +46,9 @@ and <a href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garci
 rising graduate student <a href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).</p>
 
 <p>Check out <a href="https://ui.adsabs.harvard.edu/public-libraries/4YGg7Pm5TVOXW659qG2YPw">my ADS publication list</a> to learn more!</p>
+
+<ul>
+<li><a href="https://sflury.github.io/index.html">Home</a></li>
+<li><a href="https://sflury.github.io/about.html">About</a></li>
+<li><a href="https://sflury.github.io/teaching.html">Teaching</a></li>
+</ul>
