--- a/teaching.html
+++ b/teaching.html
@@ -16,3 +16,9 @@ were then directly applied to manual data reduction of raw images they recorded
 on a CCD mounted on a 17 inch reflector.</p>
 
 <img src="https://sflury.github.io/img/mandelbrot.png" alt="Mandelbrot zoom-in">
+
+<ul>
+<li><a href="https://sflury.github.io/index.html">Home</a></li>
+<li><a href="https://sflury.github.io/about.html">About</a></li>
+<li><a href="https://sflury.github.io/research.html">Research</a></li>
+</ul>
