added figures for research

--- a/about.html
+++ b/about.html
@@ -52,9 +52,7 @@ tedious but soothing.</p>
 to problem solve, cooperatively or competitively, learn new ways to think about
 systems with different rules, develop teamwork skills, learn to embrace setbakcs
 and losses, and to build social connections and community. Current games I am
-into include "Settlers of Catan", "Terraforming Mars", "Wingspan", and
-"Race for the Galaxy".</p>
-
+into include "Settlers of Catan", "Terraforming Mars", and "Wingspan".</p>
 
 <ul>
 <li><a href="https://sflury.github.io/index.html">Home</a></li>
