--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-My name is Sophia Flury. I am currently a PhD candidate at the University of
-Massachusets.
+<h1>Sophia Flury</h1>
+
+<p>My name is Sophia Flury. I am currently a PhD candidate at the University of
+Massachusets, where I study and conduct research in Astronomy.</p>
 
 <ul>
 <li><a href="https://sflury.github.io/about.html">About</a></li>
