--- a/research.html
+++ b/research.html
@@ -11,6 +11,9 @@ other galaxies. Currently, I work on a variety of projects led by faculty at
 multiple institutions, which has given me the opportunity for extensive
 collaboration with astronomers across the world.</p>
 
+<img src="https://sflury.github.io/img/j1033_crossdisp.png" alt="J1033 CrossDisp">
+<img src="https://sflury.github.io/img/fescO32.png" alt="fesc - O32">
+
 <p>With <a href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>
 (Williams College), I am using a combination of
 UV spectroscopy with HST/COS
@@ -30,6 +33,10 @@ combination of CLOUDY (see Oli's extensive AGN series) and MAPPINGS to assess
 effects of nebular properties and physics on the apparent temperature structure
 to obtain insight from our empirical constraints using nebular auroral lines.</p>
 
+<img src="https://sflury.github.io/img/ngc613_map.png" alt="NGC 613">
+<img src="https://sflury.github.io/img/outflowO3.png" alt="[O III] outflow">
+
+
 <p>With <a href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University), I am using IFU,
 SDSS, and long-slit spectroscopy to investigate the relationships between AGN,
 star formation, and their host galaxies by analyzing the nebular emission line
@@ -42,7 +49,7 @@ interiors, I started a research group to investigate and develop novel
 diagnostics of the dynamos and structure of low mass (< 1 Msun) stars using
 Gaia, 2MASS, Kepler, and TESS photometry. I work with two other PhD candidates,
 <a href="https://www.umass.edu/astronomy/people/graduate-student/sandra-bustamante">Sandra Bustamante</a> (UMass)
-and <a href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garcia Soto</a> (Darmouth), as well as
+and <a href="https://physics.dartmouth.edu/people/aylin-garcia-soto">Aylin Garcia Soto</a> (Dartmouth), as well as
 rising graduate student <a href="https://www.linkedin.com/in/chase-alvarado-anderson-7792491a7/">Chase Alvarado-Anderson</a> (Stanford).</p>
 
 <p>Check out <a href="https://ui.adsabs.harvard.edu/public-libraries/4YGg7Pm5TVOXW659qG2YPw">my ADS publication list</a> to learn more!</p>
