additional figures plus sizing

--- a/research.html
+++ b/research.html
@@ -11,8 +11,8 @@ other galaxies. Currently, I work on a variety of projects led by faculty at
 multiple institutions, which has given me the opportunity for extensive
 collaboration with astronomers across the world.</p>
 
-<img src="https://sflury.github.io/img/j1033_crossdisp.png" alt="J1033 CrossDisp">
-<img src="https://sflury.github.io/img/fescO32.png" alt="fesc - O32">
+<img src="https://sflury.github.io/img/j1033_crossdisp.png" alt="J1033 CrossDisp" width=400>
+<img src="https://sflury.github.io/img/fescO32.png" alt="fesc - O32" width=400>
 
 <p>With <a href="https://astronomy.williams.edu/profile/08aej/">Anne Jaskot</a>
 (Williams College), I am using a combination of
@@ -33,8 +33,8 @@ combination of CLOUDY (see Oli's extensive AGN series) and MAPPINGS to assess
 effects of nebular properties and physics on the apparent temperature structure
 to obtain insight from our empirical constraints using nebular auroral lines.</p>
 
-<img src="https://sflury.github.io/img/ngc613_map.png" alt="NGC 613">
-<img src="https://sflury.github.io/img/outflowO3.png" alt="[O III] outflow">
+<img src="https://sflury.github.io/img/ngc613_map.png" alt="NGC 613" width=400>
+<img src="https://sflury.github.io/img/outflowO3.png" alt="[O III] outflow" width=400>
 
 
 <p>With <a href="https://www.wesleyan.edu/academics/faculty/emoran/profile.html">Ed Moran</a> (Wesleyan University), I am using IFU,
