additional fig sizing

--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@ combination of CLOUDY (see Oli's extensive AGN series) and MAPPINGS to assess
 effects of nebular properties and physics on the apparent temperature structure
 to obtain insight from our empirical constraints using nebular auroral lines.</p>
 
-<img src="https://sflury.github.io/img/ngc613_map.png" alt="NGC 613" width=400>
+<img src="https://sflury.github.io/img/ngc613_map.png" alt="NGC 613" width=600>
 <img src="https://sflury.github.io/img/outflowO3.png" alt="[O III] outflow" width=400>
 
 
@@ -43,6 +43,8 @@ star formation, and their host galaxies by analyzing the nebular emission line
 properties, including flux ratio diagnostics like the BPT, nebular diagnostics,
 and line profile shapes. With Ed, I have mentored several Master's students and
 directly assisted with their final thesis projects.</p>
+
+<img src="https://sflury.github.io/img/LowMassSat.png" alt="Saturation Tracers" width=400>
 
 <p>In a different vein, inspired by a graduate course the astrophysics of stellar
 interiors, I started a research group to investigate and develop novel
